[workspace]
members = ["domain", "migration", "entry"]
resolver = "2"

[workspace.dependencies]
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
async-trait = "0.1.80"
log = "0.4.22"
futures = "0.3.30"