[workspace]
members = ["domain", "migration", "entry", "persistence"]
resolver = "2"

[workspace.dependencies]
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
async-trait = "0.1.80"
futures = "0.3.30"
axum = { version = "0.7.5", features = ["default", "macros"] }
axum-extra = { version = "0.9.3", features = ["query"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.120"
toml = "0.8.14"
derive_more = "0.99.18"
tracing = { version = "0.1.40" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "json"] }
uuid = { version = "1.9.1", features = ["v4"] }
tower = "0.4.13"
jsonwebtoken = "9.3.0"
thiserror = "1.0.61"
rand = "0.8.5"