[package]
name = "ppaass-blog-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
ppaass-blog-domain = { path = "../domain" }
ppaass-blog-migration = { path = "../migration" }